--- a/config.browserstack.env
+++ b/config.browserstack.env
@@ -3,8 +3,8 @@ platformVersion='9.0'
 deviceName='Google Pixel 3'
 app='bs://c700ce60cf13ae8ed97705a55b8e022f13c5827c'
 remote_url='http://hub.browserstack.com/wd/hub'
-userName='harrypotter_qiHHSb'
-accessKey='fSnAmPdKHW2xsDkV95Zs'
+userName='bsuser_sdj53k'
+accessKey='bAwRkcgpsoxX7HMeSNzp'
 projectName='First Python project'
 buildName='browserstack-build-1'
 sessionName='BStack first_test'
